@@ -1,10 +1,13 @@
 package br.com.mavidsmile.mavidsmile.gateways.controllers;
 
 import br.com.mavidsmile.mavidsmile.domains.Cliente;
+import br.com.mavidsmile.mavidsmile.domains.Notificacao;
 import br.com.mavidsmile.mavidsmile.gateways.exceptions.ProgressoNotFoundException;
 import br.com.mavidsmile.mavidsmile.gateways.repositories.ClienteRepository;
+import br.com.mavidsmile.mavidsmile.gateways.repositories.NotificacaoRepository;
 import br.com.mavidsmile.mavidsmile.gateways.response.ClienteProgressoResponseDTO;
 import br.com.mavidsmile.mavidsmile.gateways.response.ClienteRankingResponseDTO;
+import br.com.mavidsmile.mavidsmile.gateways.response.NotificacaoResponseDTO;
 import br.com.mavidsmile.mavidsmile.usecases.interfaces.AdicionarRegistroProgresso;
 import br.com.mavidsmile.mavidsmile.usecases.interfaces.BuscarClientes;
 import br.com.mavidsmile.mavidsmile.usecases.interfaces.ExibiClienteDTO;
@@ -24,6 +27,7 @@ public class ProgressoController {
     private final AdicionarRegistroProgresso adicionarRegistroProgresso;
     private final ExibiClienteDTO exibiClienteDTO;
     private final BuscarClientes buscarClientes;
+    private final NotificacaoRepository notificacaoRepository;
 
     @GetMapping()
     public ResponseEntity<List<ClienteRankingResponseDTO>> exibiRankingGeralDosClientes() {
@@ -33,7 +37,7 @@ public class ProgressoController {
 
         List<ClienteRankingResponseDTO> clientesDTO = amigosCliente.stream()
                 .map(exibiClienteDTO::transformarClienteRankingDTO)
-                .collect(Collectors.toList());
+                .toList();
 
         return ResponseEntity.ok(clientesDTO);
     }
@@ -59,5 +63,20 @@ public class ProgressoController {
 
         return ResponseEntity.ok("Registro adicionado com sucesso");
 
+    }
+
+    @GetMapping("/notificacao")
+    public ResponseEntity<List<NotificacaoResponseDTO>> enviarNotificacao() {
+
+        List<Notificacao> notificacaos = notificacaoRepository.findAll();
+
+        List<NotificacaoResponseDTO> notificacoesResponseDTOS = notificacaos.stream()
+                .map(notificacao -> NotificacaoResponseDTO.builder()
+                        .mensagem(notificacao.getMensagem())
+                        .tipo(notificacao.getTipo())
+                        .build())
+                .toList();
+
+        return ResponseEntity.ok(notificacoesResponseDTOS);
     }
 }
